2006-03-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/io/ObjectInputStream.java:
	(parseContent(byte)): Added enum support.
	* java/io/ObjectStreamConstants.java:
	(TC_ENUM): Added.
	(TC_MAX): Changed to new maximum, TC_ENUM.
	
2006-03-27  Tom Tromey  <tromey@redhat.com>

	PR classpath/25189:
	* java/lang/Enum.java (valueOf): Ensure that the named field
	is an enum constant.
	(compareTo): Check class of enum.

2006-03-27  Tom Tromey  <tromey@redhat.com>

	* java/lang/reflect/ParameterizedType.java: Javadoc fix.

2006-03-27  Tom Tromey  <tromey@redhat.com>

	* vm/reference/java/lang/reflect/Method.java (METHOD_MODIFIERS):
	New constant.
	(getModifiersInternal): Renamed from getModifiers.
	(getModifiers): New method.
	(isBridge): Likewise.
	(isSynthetic): Likewise.
	(isVarArgs): Likewise.
	* vm/reference/java/lang/reflect/Field.java (FIELD_MODIFIERS):
	New constant.
	(getModifiersInternal): Renamed from getModifiers.
	(getModifiers): New method.
	(isSynthetic): Likewise.
	(isEnumConstant): Likewise.
	* vm/reference/java/lang/reflect/Constructor.java
	(getModifiersInternal): Renamed from getModifiers.
	(getModifiers): New method
	(CONSTRUCTOR_MODIFIERS): New constant.
	(isSynthetic): New method.
	(isVarArgs): Likewise.
	* java/lang/reflect/Member.java (isSynthetic): New method.

2006-03-28  Tom Tromey  <tromey@redhat.com>

	* java/net/Proxy.java (TYPE): Added missing ";".

2006-03-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/math/RoundingMode.java:
	Fixed serialization UID.
	* java/net/Proxy.java:
	(Type): Likewise.
	
2006-03-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/io/CharArrayWriter.java:
	(append(char)): Documented.
	(append(CharSequence)): Likewise.
	(append(CharSequence,int,int)): Likewise.
	
2006-03-27  Jeroen Frijters  <jeroen@frijters.net>

	* vm/reference/java/lang/reflect/Constructor.java
	(getTypeParameters): Check return value of getSignature for null.
	* vm/reference/java/lang/reflect/Method.java