@@ -1,3 +1,14 @@
+2006-04-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/io/ObjectOutputStream.java:
+	(writeObject(Object)): Added enum support.
+	(writeClassDescriptor(ObjectStreamClass)): Likewise.
+	* java/io/ObjectStreamClass.java:
+	(isEnum()): New package-private method.
+	(setFlags(Class)): Added enum support.
+	* java/io/ObjectStreamConstants.java:
+	(SC_ENUM): Added.
+	
 2006-03-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/io/ObjectInputStream.java:
